[package]
name = "emrecansuster_website"
version = "0.1.0"
authors = ["Emrecan Şuşter <emrecansuster@outlook.com>"]
license = "MIT"
edition = "2021"

[dependencies]
ratatui = { version = "0.29.0", default-features = false }
color-eyre = "0.6.5"
ratzilla = { git = "https://github.com/Emivvvvv/ratzilla.git", branch = "fix/overridden-hyperlinks" }
console_error_panic_hook = "0.1.7"
web-time = "1.1.0"
console_log = "1.0.0"
log = "0.4.27"
